declarative/processor/src/test/resources/good/dataset unannotated method is static.java
package x;

import com.inrupt.rdf.wrapping.declarative.annotation.Dataset;

@Dataset
interface X {
    static Object x() {
        return null;
    }
}
